# Telegram-text-to-voice-botzip

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  start-all.sh
.agents/memory/: MEMORY.md  edge-tts-no-custom-ssml.md  git-imported-api-server.md  mini-app-url-cross-platform-domain.md  plain-workflow-public-exposure-pnpm-stack.md  polyglot-cli-bridge.md  python-services-outside-artifacts.md  python-sibling-package-import.md
attached_assets/: Pasted-Convert-my-existing-Edge-TTS-Telegram-bot-project-into-_1783858013060.txt  Pasted-Integrate-Microsoft-Edge-TTS-into-my-existing-Python-Te_1783764903779.txt
telegram-bot/: Dockerfile  bot.py  requirements.txt
telegram-bot/mini-app/public/webapp/: app.js  index.html  style.css
telegram-bot/mini-app/src/: app.ts
telegram-bot/mini-app/src/lib/: pythonBridge.ts
telegram-bot/mini-app/src/routes/: index.ts  miniApp.ts
telegram-bot/tts/: __init__.py  cli.py  config.py  generator.py  handlers.py  ssml.py  translator.py  utils.py  voice_registry.py  voices.py
